--- a/index.html
+++ b/index.html
@@ -282,11 +282,11 @@
 
     <!-- About section -->
     <section id="about">
-      <div class="container about">
+      <div class="container about mt-5">
         <div class="row">
           <div class="offset-md-1 col-md-10">
             <div class="row">
-              <div class="col-md-4">
+              <div class="col-md-5">
                 <h2>
                   About <br />
                   Myself
@@ -332,35 +332,29 @@
                     </a>
                   </li>
                 </ul>
+              </div>
+              <div class="col-md-7">
+                <div class="d-flex justify-content-between">
+                  <h3>Languages</h3>
+                  <img src="./img/down_arrow.svg" alt="Down Arrow icon" width="12" height="6" />
+                </div>
 
-                <div class="d-flex justify-content-between"><h3>Languages</h3><img src="./img/down_arrow.svg" alt="Down icon"></div>
-                
                 <ul class="d-inline-flex p-0 m-0">
                   <li class="mr-2 d-flex flex-column align-content-start">
-                    <img
-                    src="./img/js.png"
-                    alt="JavaScript Icon"
-                  />
+                    <img src="./img/js.png" alt="JavaScript Icon" width="48" height="48"/>
+                    <span>javascript</span>
+                  </li>
+                  <li class="mr-2 d-flex flex-column align-content-start">
+                    <img src="./img/html.png" alt="HTML Icon" width="48" height="48" />
+                    <span>HTML</span>
+                  </li>
 
-                  <span>javascript</span>
-                  </li>
                   <li class="mr-2 d-flex flex-column align-content-start">
-                    <img
-                    src="./img/html.png"
-                    alt="HTML Icon"
-                  />
-                  </li>
-                  <span>HTML</span>
-                  <li class="mr-2 d-flex flex-column align-content-start">
-                      <img
-                        src="./img/social-media-icons/m_.svg"
-                        alt="Social Media Icon"
-                      />
-                      <span>HTML</span>
+                    <img src="./img/css.png" alt="CSS Icon" width="48" height="48"/>
+                    <span>CSS</span>
                   </li>
                 </ul>
               </div>
-              <div class="col-md-8"></div>
             </div>
           </div>
         </div>
