align about myself content

--- a/index.html
+++ b/index.html
@@ -334,26 +334,69 @@
                 </ul>
               </div>
               <div class="col-md-7">
-                <div class="d-flex justify-content-between">
-                  <h3>Languages</h3>
-                  <img src="./img/down_arrow.svg" alt="Down Arrow icon" width="12" height="6" />
+                <div class="d-flex flex-column flex-fill">
+                  <div class="d-flex justify-content-between align-items-center">
+                    <h4 class="">Languages</h4>
+                    <img
+                      src="./img/down_arrow.svg"
+                      alt="Down Arrow icon"
+                      width="12"
+                      height="6"
+                    />
+                  </div>
+                 
+                  <ul class="d-inline-flex p-2 m-0 mx-2">
+                    <li class="mr-2 p-2 d-flex flex-column align-content-start bg-light">
+                      <img
+                        src="./img/js.png"
+                        alt="JavaScript Icon"
+                        width="48"
+                        height="48"
+                      />
+                      <span>javascript</span>
+                    </li>
+                    <li class="mr-2 p-2 d-flex flex-column align-content-start bg-light">
+                      <img
+                        src="./img/html.png"
+                        alt="HTML Icon"
+                        width="48"
+                        height="48"
+                      />
+                      <span>HTML</span>
+                    </li>
+
+                    <li class="mr-2 p-2 d-flex flex-column align-content-start bg-light">
+                      <img
+                        src="./img/css.png"
+                        alt="CSS Icon"
+                        width="48"
+                        height="48"
+                      />
+                      <span>CSS</span>
+                    </li>
+                  </ul>
+
+                  <div class="d-flex justify-content-between align-items-center">
+                    <h4>Frameworks</h4>
+                    <img
+                      src="./img/forward_arrow.svg"
+                      alt="Forward Arrow icon"
+                      width="6"
+                      height="12"
+                    />
+                  </div>
+                  <hr>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <h4>Skills</h4>
+                    <img
+                      src="./img/forward_arrow.svg"
+                      alt="Forward Arrow icon"
+                      width="6"
+                      height="12"
+                    />
+                  </div>
+                  <hr>
                 </div>
-
-                <ul class="d-inline-flex p-0 m-0">
-                  <li class="mr-2 d-flex flex-column align-content-start">
-                    <img src="./img/js.png" alt="JavaScript Icon" width="48" height="48"/>
-                    <span>javascript</span>
-                  </li>
-                  <li class="mr-2 d-flex flex-column align-content-start">
-                    <img src="./img/html.png" alt="HTML Icon" width="48" height="48" />
-                    <span>HTML</span>
-                  </li>
-
-                  <li class="mr-2 d-flex flex-column align-content-start">
-                    <img src="./img/css.png" alt="CSS Icon" width="48" height="48"/>
-                    <span>CSS</span>
-                  </li>
-                </ul>
               </div>
             </div>
           </div>
