fix page background color

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <!--Navigation header-->
-    <header class="container-fluid">
+    <header class="container-fluid bg-white">
       <ul class="nav justify-content-end px-5">
         <li class="nav-item logo">
           <a class="nav-link active" aria-current="page" href="#">My Logo</a>
@@ -35,11 +35,14 @@
     </header>
 
     <!-- Headline Section -->
-    <section id="headline">
+    <section id="headline" class="bg-white">
       <div class="container headline">
         <div class="row">
           <div class="col-sm-8 offset-sm-2 pt-5">
-            <h1>I'm Sam Glad to see you!</h1>
+            <h1>
+              I'm Sam <br />
+              Glad to see you!
+            </h1>
             <p>
               I'm a software developer! I can help you build a product , feature
               or website Look through some of my work and experience! If you
@@ -281,7 +284,7 @@
     </section>
 
     <!-- About section -->
-    <section id="about">
+    <section id="about" class="bg-white pt-5">
       <div class="container about mt-5">
         <div class="row">
           <div class="offset-md-1 col-md-10">
@@ -335,7 +338,9 @@
               </div>
               <div class="col-md-7">
                 <div class="d-flex flex-column flex-fill">
-                  <div class="d-flex justify-content-between align-items-center">
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
                     <h4 class="">Languages</h4>
                     <img
                       src="./img/down_arrow.svg"
@@ -344,9 +349,11 @@
                       height="6"
                     />
                   </div>
-                 
+
                   <ul class="d-inline-flex p-2 m-0 mx-2">
-                    <li class="mr-2 p-2 d-flex flex-column align-content-start bg-light">
+                    <li
+                      class="mr-2 p-2 d-flex flex-column align-content-start bg-light"
+                    >
                       <img
                         src="./img/js.png"
                         alt="JavaScript Icon"
@@ -355,7 +362,9 @@
                       />
                       <span>javascript</span>
                     </li>
-                    <li class="mr-2 p-2 d-flex flex-column align-content-start bg-light">
+                    <li
+                      class="mr-2 p-2 d-flex flex-column align-content-start bg-light"
+                    >
                       <img
                         src="./img/html.png"
                         alt="HTML Icon"
@@ -365,7 +374,9 @@
                       <span>HTML</span>
                     </li>
 
-                    <li class="mr-2 p-2 d-flex flex-column align-content-start bg-light">
+                    <li
+                      class="mr-2 p-2 d-flex flex-column align-content-start bg-light"
+                    >
                       <img
                         src="./img/css.png"
                         alt="CSS Icon"
@@ -376,7 +387,9 @@
                     </li>
                   </ul>
 
-                  <div class="d-flex justify-content-between align-items-center">
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
                     <h4>Frameworks</h4>
                     <img
                       src="./img/forward_arrow.svg"
@@ -385,8 +398,10 @@
                       height="12"
                     />
                   </div>
-                  <hr>
-                  <div class="d-flex justify-content-between align-items-center">
+                  <hr />
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
                     <h4>Skills</h4>
                     <img
                       src="./img/forward_arrow.svg"
@@ -395,7 +410,7 @@
                       height="12"
                     />
                   </div>
-                  <hr>
+                  <hr />
                 </div>
               </div>
             </div>
