added background image on headline section and fix margins on works section

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     </header>
 
     <!-- Headline Section -->
-    <section id="headline" class="bg-white">
+    <section id="headline" class="bg-white mb-10">
       <div class="container headline">
         <div class="row">
-          <div class="col-sm-8 offset-sm-2 pt-5">
+          <div class="col-sm-8 offset-sm-2 d-flex flex-column justify-content-center">
             <h1>
               I'm Sam <br />
               Glad to see you!
@@ -50,7 +50,6 @@
               hestiate to contact me.
             </p>
             <p class="pb-0 mb-1">LET'S CONNECT</p>
-
             <ul class="d-inline-flex p-0 m-0">
               <li class="mr-2">
                 <a class="fade-dark-text" href="#"
@@ -91,7 +90,7 @@
     <!-- works Section -->
     <section id="works">
       <div class="container works mt-5">
-        <div class="row mb-5">
+        <div class="row mb-10">
           <div class="offset-md-1 col-md-10 card p-0">
             <div class="row">
               <div class="col-md-6">
@@ -138,7 +137,7 @@
           </div>
         </div>
 
-        <div class="row mb-5">
+        <div class="row mb-10">
           <div class="offset-md-1 col-md-10 card p-0">
             <div class="row">
               <div class="col-md-6">
@@ -187,7 +186,7 @@
           </div>
         </div>
 
-        <div class="row mb-5">
+        <div class="row mb-10">
           <div class="offset-md-1 col-md-10 card p-0">
             <div class="row">
               <div class="col-md-6">
@@ -234,7 +233,7 @@
           </div>
         </div>
 
-        <div class="row mb-5">
+        <div class="row mb-10">
           <div class="offset-md-1 col-md-10 card p-0">
             <div class="row">
               <div class="col-md-6">
@@ -284,8 +283,8 @@
     </section>
 
     <!-- About section -->
-    <section id="about" class="bg-white pt-5">
-      <div class="container about mt-5">
+    <section id="about" class="bg-white mt-5 mb-5 pt-10 pb-10">
+      <div class="container about">
         <div class="row">
           <div class="offset-md-1 col-md-10">
             <div class="row">
