fix margin about myself section

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                   </ul>
 
                   <div
-                    class="d-flex justify-content-between align-items-center"
+                    class="d-flex mt-3 justify-content-between align-items-center"
                   >
                     <h4>Frameworks</h4>
                     <img
