--- a/index.html
+++ b/index.html
@@ -416,7 +416,18 @@
           </div>
         </div>
       </div>
+
+    <section id="contact" class=" bg-primary card text-center text-dark" >
+        <div class="card-body">
+          <h5 class="card-title">Contact me</h5>
+          <p class="card-text">if you have an application you are interested in developing,
+            a feature that you need built or a project that needs coding.i'd love to help with it
+          </p>
+          <a href="#" class="btn bg-white">Get in Touch</a>
+        </div>
     </section>
+    </section>
+
     <!-- Link Bootstrap 5 javascript via CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
