--- a/index.html
+++ b/index.html
@@ -417,12 +417,26 @@
         </div>
       </div>
 
-    <section id="contact" class=" bg-primary card text-center text-dark" >
+    <section id="contact" class=" bg-primary card text-center text-dark mt-5" >
         <div class="card-body">
           <h5 class="card-title">Contact me</h5>
           <p class="card-text">if you have an application you are interested in developing,
             a feature that you need built or a project that needs coding.i'd love to help with it
           </p>
+          <div class="w-50 m-auto">
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Write your name</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="write your name here">
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="ololadeshot@gmail.com">
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Write your message</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+          </div>
           <a href="#" class="btn bg-white">Get in Touch</a>
         </div>
     </section>
