complete contact section

--- a/index.html
+++ b/index.html
@@ -417,24 +417,24 @@
         </div>
       </div>
 
-    <section id="contact" class=" bg-primary card text-center text-dark mt-5" >
+    <section id="contact" class=" bg-primary card text-center text-dark mt-5 p-5" >
         <div class="card-body">
-          <h5 class="card-title">Contact me</h5>
-          <p class="card-text">if you have an application you are interested in developing,
+          <h5 class="card-title text-white fs-1">Contact me</h5>
+          <p class="card-text text-white w-50 m-auto mb-3">if you have an application you are interested in developing,
             a feature that you need built or a project that needs coding.i'd love to help with it
           </p>
-          <div class="w-50 m-auto">
+          <div class="w-25 m-auto">
           <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">Write your name</label>
+            <label for="exampleFormControlInput1" class="form-label text-white">Write your name</label>
             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="write your name here">
           </div>
           <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">Email address</label>
+            <label for="exampleFormControlInput1" class="form-label text-white">Email address</label>
             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="ololadeshot@gmail.com">
           </div>
           <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label">Write your message</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <label for="exampleFormControlTextarea1" class="form-label text-white"> Message</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="write your message here"></textarea>
           </div>
           </div>
           <a href="#" class="btn bg-white">Get in Touch</a>
